Update App.java
deprecation fix